[package]
name = "pyana-credentials"
version.workspace = true
edition.workspace = true
description = "Pyana credential primitives — issue, present, verify, and revoke verifiable credentials, lifted from bridge::present (G31)."

# This crate is the promotion of `bridge::present` + `macaroon` into a dedicated
# credential surface, as called out in `PYANA-FLAWS-FROM-APPS.md` G31. It wraps
# the BridgePresentationBuilder pipeline with a documented credential-shaped API
# (`Credential`, `Presentation`, `RevocationProof`, `PredicateRequest`,
# `issue` / `present` / `verify` / `revoke`) so apps (identity, subscription,
# any KYC-shaped flow) can reach for one well-paved API instead of reinventing
# `Credential { ..., /* no signature */ }` as `apps/identity/` did.

[dependencies]
pyana-bridge = { path = "../bridge" }
pyana-circuit = { path = "../circuit" }
pyana-cell = { path = "../cell", default-features = false }
pyana-commit = { path = "../commit" }
token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
pyana-trace = { path = "../trace" }
macaroon = { path = "../macaroon" }

blake3 = "1"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
