[package]
name = "pyana-demo"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
getrandom = { workspace = true }
pyana-commit = { path = "../commit" }
pyana-federation = { path = "../federation" }
pyana-circuit = { path = "../circuit" }
pyana-types = { path = "../types" }

[[bin]]
name = "pyana-demo"
path = "src/main.rs"

[lints]
workspace = true
