# Standalone PoC crate: Rust hosts the compiled Lean kernel and calls it for real.
# An EMPTY [workspace] table detaches this crate from the metatheory cargo workspace
# so building it does not disturb the repo's workspace (other agents are editing it).
[workspace]

[package]
name = "dregg-lean-ffi"
version = "0.1.0"
edition = "2021"
# `cargo run` (no --bin) runs the differential harness — the cascade beachhead.
default-run = "differential"

[[bin]]
name = "dregg-lean-ffi"
path = "src/main.rs"

# The cascade beachhead: a property-based DIFFERENTIAL harness that makes the
# verified Lean kernel the golden oracle for a Rust reference implementation.
[[bin]]
name = "differential"
path = "src/differential.rs"

# The CIRCUIT-extraction differential: decodes the Lean-`emit`ted kernelCircuit
# wire form and binds it to the Rust-native AIR by fingerprint. Does not call
# Lean FFI itself, but links the same archive (build.rs is crate-global).
[[bin]]
name = "circuit_differential"
path = "src/circuit_differential.rs"

[dependencies]
# Reproduces circuit::air_descriptor::fingerprint (BLAKE3-derive-key) so the
# decoded-Lean AIR can be fingerprint-bound to the Rust-native AIR.
blake3 = "1"

[build-dependencies]
cc = "1"
