[package]
name = "pyana-federation"
version.workspace = true
edition.workspace = true

[dependencies]
pyana-commit = { path = "../commit" }
pyana-turn = { path = "../turn" }
pyana-types = { path = "../types" }
hints = { path = "../hints" }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
getrandom = { workspace = true }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ark-serialize = { version = "0.5.0", features = ["serde_with"] }
ark-ff = "0.5.0"
ark-std = "0.5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "pyana-federation-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "pyana-federation-node"
path = "src/bin/node.rs"

[[bench]]
name = "consensus_bench"
harness = false

[features]

[lints]
workspace = true
