[package]
name = "pyana-intent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Distributed intent engine for privacy-preserving capability discovery and matching"

[dependencies]
blake3 = "1"
getrandom = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
pyana-cell = { path = "../cell" }
pyana-circuit = { path = "../circuit" }
pyana-commit = { path = "../commit" }
pyana-trace = { path = "../trace" }
pyana-turn = { path = "../turn" }
token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
globset = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
