[package]
name = "pyana-macaroon"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = ["crypto"]
crypto = ["dep:base64", "dep:chacha20poly1305", "dep:getrandom", "dep:hmac", "dep:sha2", "dep:subtle", "dep:zeroize"]
zkvm = []

[dependencies]
base64 = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
thiserror = { workspace = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "pyana_macaroon"
crate-type = ["lib"]

[[bench]]
name = "macaroon_bench"
harness = false

[lints]
workspace = true
