[package]
name = "pyana-morpheus"
version.workspace = true
edition.workspace = true

[dependencies]
hints = { path = "../hints" }

ark-std = "0.5.0"
ark-serialize = { version = "0.5.0", features = [ "serde_with" ] }
ark-serialize-derive = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json_any_key = "2"

tracing = "0.1"

time = { version = "0.3.39", features = ["serde"] }
test-log = { version = "0.2", features = ["trace"] }

[dev-dependencies]

[lib]
name = "pyana_morpheus"
crate-type = ["rlib"]

[features]
[lints]
workspace = true
