[package]
name = "pyana-net"
version = "0.1.0"
edition = "2024"

[dependencies]
pyana-types = { path = "../types" }
quinn = { version = "0.11", features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.14", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
blake3 = "1"
bytes = "1"
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"

[[bin]]
name = "pyana-p2p-demo"
path = "src/bin/demo.rs"
