[package]
name = "pyana-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pyana-types = { workspace = true }
quinn = { version = "0.11", features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.14", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
postcard = { version = "1", features = ["use-std"] }
serde = { workspace = true }
blake3 = "1"
bytes = "1"
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"

[[bin]]
name = "pyana-p2p-demo"
path = "src/bin/demo.rs"

[lints]
workspace = true
