[package]
name = "pyana-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Federation node daemon — hosts an agent wallet, participates in consensus, and serves a localhost API"

[dependencies]
pyana-types = { path = "../types" }
pyana-cell = { path = "../cell" }
pyana-turn = { path = "../turn" }
pyana-store = { path = "../store" }
pyana-federation = { path = "../federation" }
pyana-sdk = { path = "../sdk" }
pyana-circuit = { path = "../circuit" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom = "0.3"
ed25519-dalek = { version = "2", features = ["std"] }

[[bin]]
name = "pyana-node"
path = "src/main.rs"
