[package]
name = "pyana-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Federation node daemon — hosts an agent cipherclerk, participates in consensus, and serves a localhost API"

[dependencies]
pyana-types = { path = "../types" }
pyana-cell = { path = "../cell" }
pyana-turn = { path = "../turn" }
pyana-persist = { path = "../persist" }
pyana-federation = { path = "../federation" }
pyana-sdk = { path = "../sdk" }
pyana-intent = { path = "../intent" }
pyana-circuit = { path = "../circuit" }
pyana-commit = { path = "../commit" }
pyana-dsl-runtime = { path = "../pyana-dsl-runtime" }
pyana-coord = { path = "../coord" }
pyana-net = { path = "../net" }
pyana-blocklace = { path = "../blocklace" }
pyana-storage = { path = "../storage" }
pyana-captp = { path = "../captp" }
pyana-macaroon = { workspace = true, features = ["crypto"] }
ark-serialize = { workspace = true }
ark-std = "0.5.0"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom = { workspace = true }
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["std"] }
quinn = { version = "0.11", features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
blake3 = "1"
argon2 = "0.5"
subtle = { workspace = true }
base64 = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
zeroize = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Dev-deps for future router-level adversarial tests (Stage 0c followup once
# pyana-turn/pyana-cell rebuild lands from Stages 0a/0b). Currently the
# unit-style tests in api.rs / relay_service.rs do not need them, but keeping
# them declared keeps the followup PR trivial.
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"

[[bin]]
name = "pyana-node"
path = "src/main.rs"

[lints]
workspace = true
