[package]
name = "dregg-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Federation node daemon — hosts an agent cipherclerk, participates in consensus, and serves a localhost API"

[dependencies]
dregg-types = { path = "../types" }
dregg-cell = { path = "../cell" }
dregg-turn = { path = "../turn" }
dregg-persist = { path = "../persist" }
dregg-federation = { path = "../federation" }
dregg-sdk = { path = "../sdk" }
dregg-intent = { path = "../intent" }
dregg-circuit = { path = "../circuit" }
dregg-commit = { path = "../commit" }
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }
dregg-coord = { path = "../coord" }
dregg-net = { path = "../net" }
dregg-blocklace = { path = "../blocklace" }
dregg-storage = { path = "../storage" }
dregg-captp = { path = "../captp" }
dregg-app-framework = { path = "../app-framework" }
dregg-credentials = { path = "../credentials" }
starbridge-nameservice = { path = "../starbridge-apps/nameservice" }
starbridge-identity = { path = "../starbridge-apps/identity" }
starbridge-subscription = { path = "../starbridge-apps/subscription" }
starbridge-governed-namespace = { path = "../starbridge-apps/governed-namespace" }
dregg-macaroon = { workspace = true, features = ["crypto"] }
ark-serialize = { workspace = true }
ark-std = "0.5.0"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom = { workspace = true }
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["std"] }
quinn = { version = "0.11", features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
blake3 = "1"
argon2 = "0.5"
subtle = { workspace = true }
base64 = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
zeroize = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Dev-deps for future router-level adversarial tests (Stage 0c followup once
# dregg-turn/dregg-cell rebuild lands from Stages 0a/0b). Currently the
# unit-style tests in api.rs / relay_service.rs do not need them, but keeping
# them declared keeps the followup PR trivial.
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
x25519-dalek = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
dregg-verifier = { path = "../verifier" }

[[bin]]
name = "dregg-node"
path = "src/main.rs"

[lints]
workspace = true
