[package]
name = "pyana-preflight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Golden Master Preflight: end-to-end integration test gate for devnet -> testnet -> mainnet promotion"

[[bin]]
name = "pyana-preflight"
path = "src/main.rs"

[dependencies]
pyana-sdk = { path = "../sdk" }
pyana-circuit = { path = "../circuit" }
pyana-turn = { path = "../turn" }
pyana-cell = { path = "../cell" }
pyana-intent = { path = "../intent" }
pyana-commit = { path = "../commit" }
pyana-federation = { path = "../federation" }
pyana-bridge = { path = "../bridge" }
pyana-types = { path = "../types" }
pyana-blocklace = { path = "../blocklace" }
pyana-captp = { path = "../captp" }
pyana-wire = { path = "../wire" }
pyana-storage = { path = "../storage" }
pyana-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
serde_json = "1"
toml = "0.8"

# App crates — exercised by preflight app integration checks.
# Gallery depends on pyana-app-framework -> pyana-sdk
# which is currently broken (missing `custom_program_proofs` field in Turn).
# Gated behind "apps-sdk" feature so preflight can still compile without them.
# Note: amm, lending, orderbook, stablecoin, dao-treasury, prediction-market
# were retired in the apps/ → starbridge-apps/ migration (see STARBRIDGE-APPS-PLAN.md §4.1).
pyana-gallery = { path = "../apps/gallery", optional = true }

# These app crates do NOT depend on pyana-sdk and compile fine.
pyana-identity = { path = "../apps/identity" }

blake3 = "1"
curve25519-dalek = { version = "4", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["std"] }
getrandom = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["apps-sdk"]
# Enable app crates that depend on pyana-sdk (via pyana-app-framework).
# Disable this feature when pyana-sdk is broken to still run lending/identity checks.
apps-sdk = ["dep:pyana-gallery"]

[lints]
workspace = true
