[package]
name = "pyana-preflight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Golden Master Preflight: end-to-end integration test gate for devnet -> testnet -> mainnet promotion"

[[bin]]
name = "pyana-preflight"
path = "src/main.rs"

[dependencies]
pyana-sdk = { path = "../sdk" }
pyana-circuit = { path = "../circuit" }
pyana-turn = { path = "../turn" }
pyana-cell = { path = "../cell" }
pyana-intent = { path = "../intent" }
pyana-commit = { path = "../commit" }
pyana-federation = { path = "../federation" }
pyana-bridge = { path = "../bridge" }
pyana-types = { path = "../types" }
pyana-blocklace = { path = "../blocklace" }
pyana-captp = { path = "../captp" }
pyana-wire = { path = "../wire" }
pyana-storage = { path = "../storage" }
pyana-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
serde_json = "1"
toml = "0.8"

# App crates — exercised by preflight app integration checks.
#
# apps/gallery and apps/identity were both retired in the apps/ → starbridge-apps/
# migration (STARBRIDGE-APPS-PLAN.md §4.1). Their starbridge-apps equivalents
# (starbridge-identity, etc.) use a different public API; the preflight checks
# that exercised them are retired in preflight/src/checks/apps.rs.
#
# When a starbridge-apps integration check is added, add the dep here:
#   starbridge-identity = { path = "../starbridge-apps/identity", optional = true }

blake3 = "1"
curve25519-dalek = { version = "4", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["std"] }
getrandom = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []

[lints]
workspace = true
